k8s/consumer/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: consumer
  labels:
    app.kubernetes.io/part-of: guardianlink
